--- a/.github/workflows/simulate.yml
+++ b/.github/workflows/simulate.yml
@@ -1,11 +1,13 @@
 name: Run Monte Carlo Simulation
+
 on:
-  schedule:
-    - cron: "0 */6 * * *"
-  workflow_dispatch:
+  workflow_run:
+    workflows: ["Fetch NBA Data"]
+    types: [completed]
 
 jobs:
   simulate:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
